--- a/shop-now/shop-now.html
+++ b/shop-now/shop-now.html
@@ -59,13 +59,49 @@
     <header class="header">
         <div class="hero-banner-browse">
             <div class="hero-banner-text">
-                <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
-                <p class="hero-banner-paragraph">We make your bathroom proud</p>
+                <h2 class="hero-banner-browse-title">Find the perfect bathtub</h2>
             </div>
         </div>
     </header>
     <main id="main-content" class="main-content">
-        <section class="browse"></section>
+        <section class="browse-section">
+            <div class="browse-parent">
+                <div class="browse-text">
+                    <h2>Featured bathtubs</h2>
+                </div>
+                <div class="browse-grid">
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                    <div class="browse-container">
+                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
 
 
     </main>
