--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="container">
+    <!--Mobile menu-->
     <div class="nav-menu">
         <input id="toggle" type="checkbox">
         <label class="toggle-container" for="toggle">
@@ -44,6 +45,7 @@
             </ul>
         </nav>
     </div>
+
     <div class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="#">Home</a> </li>
