--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
     <main id="main-content" class="main-content">
         <!--Fixa till denna section-->
-        <section class="basic-javascript-section">
+        <section class="javascript-section">
             <div class="javascript-div">
                 <header class="sub-title">
                     <h2>Fixa till denna section</h2>
