--- a/shop-now/shop-now.html
+++ b/shop-now/shop-now.html
@@ -71,37 +71,107 @@
                 </div>
                 <div class="browse-grid">
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                     <div class="browse-container">
-                        <img class="browse-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <img class="bathtub-image" src="/images/browse-bathtub1.jpg" alt="">
+                        <div class="browse-description">
+                            <h3>Product name</h3>
+                            <p>Product description</p>
+                            <p>Price</p>
+                            <a class="button" href="/shop-now/shop-now.html">
+                                <p class="button-text">Buy</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
     </main>
 
     <footer>
