--- a/shop-now/shop-now.html
+++ b/shop-now/shop-now.html
@@ -76,7 +76,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -87,7 +87,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -98,7 +98,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -109,7 +109,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -120,7 +120,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -131,7 +131,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -142,7 +142,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -153,7 +153,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
@@ -164,7 +164,7 @@
                             <h3>Product name</h3>
                             <p>Product description</p>
                             <p>Price</p>
-                            <a class="button" href="/shop-now/shop-now.html">
+                            <a class="button" href="">
                                 <p class="button-text">Buy</p>
                             </a>
                         </div>
