--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/shop-now/shop-now.html">
+                    <a href="/shop-now.html">
                         <span>Get started</span>
                     </a>
                 </li>
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="/contact.html">
                         <span>Contact</span>
                     </a>
                 </li>
@@ -49,9 +49,9 @@
     <div class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="#">Home</a> </li>
-            <li><a class="nav-link" href="/shop-now/shop-now.html">Get started</a></li>
+            <li><a class="nav-link" href="/shop-now.html">Get started</a></li>
             <li><a class="nav-link" href="#services">Services</a></li>
-            <li><a class="nav-link" href="">Contact us</a></li>
+            <li><a class="nav-link" href="/contact.html">Contact us</a></li>
         </ul>
         <header class="main-header">
             <img src="/images/bathtub.png" class="logo" alt="logo">
@@ -64,7 +64,7 @@
                 <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
                 <p class="hero-banner-paragraph">We make your bathroom proud</p>
             </div>
-            <a class="button" href="/shop-now/shop-now.html">
+            <a class="button" href="/shop-now.html">
                 <p class="button-text"> Get started</p>
             </a>
         </div>
@@ -87,7 +87,7 @@
                     <div class="horizontal-line"></div>
                     <p>Discover a bathtub style that delights all of your senses.
                     </p>
-                    <a class="button" href="/shop-now/shop-now.html">
+                    <a class="button" href="/shop-now.html">
                         <p class="button-text">Browse bathtubs</p>
                     </a>
                 </div>
@@ -143,7 +143,7 @@
             <ul class="footer-navigation">
                 <li><a class="footer-link" href="#">Terms of Use</a></li>
                 <li><a class="footer-link" href="#">Privacy Policy</a></li>
-                <li><a class="footer-link" href="#">Contact Us</a></li>
+                <li><a class="footer-link" href="/contact.html">Contact Us</a></li>
             </ul>
             <p>&copy; 2023 Bath Magic Inc. All Rights Reserved.</p>
         </div>
