--- a/shop-now.html
+++ b/shop-now.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">
+                    <a href="/shop-now.html">
                         <span>Get started</span>
                     </a>
                 </li>
@@ -49,7 +49,7 @@
             <li><a class="nav-link" href="/index.html">Home</a> </li>
             <li><a class="nav-link" href="#">Get started</a></li>
             <li><a class="nav-link" href="/index.html#services">Services</a></li>
-            <li><a class="nav-link" href="">Contact us</a></li>
+            <li><a class="nav-link" href="/contact.html">Contact us</a></li>
         </ul>
         <header class="main-header">
             <img src="/images/bathtub.png" class="logo" alt="logo">
@@ -180,7 +180,7 @@
             <ul class="footer-navigation">
                 <li><a class="footer-link" href="#">Terms of Use</a></li>
                 <li><a class="footer-link" href="#">Privacy Policy</a></li>
-                <li><a class="footer-link" href="#">Contact Us</a></li>
+                <li><a class="footer-link" href="/contact.html">Contact Us</a></li>
             </ul>
             <p>&copy; 2023 Bath Magic Inc. All Rights Reserved.</p>
         </div>
