--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/shop-now.html">
+                    <a href="/browse.html">
                         <span>Get started</span>
                     </a>
                 </li>
@@ -49,7 +49,7 @@
     <div class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="/index.html">Home</a> </li>
-            <li><a class="nav-link" href="/shop-now.html">Get started</a></li>
+            <li><a class="nav-link" href="/browse.html">Get started</a></li>
             <li><a class="nav-link" href="/index.html#services">Services</a></li>
             <li><a class="nav-link" href="#">Contact us</a></li>
         </ul>
