--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/shop-now.html">
+                    <a href="/browse.html">
                         <span>Get started</span>
                     </a>
                 </li>
@@ -49,7 +49,7 @@
     <div class="navigation">
         <ul class="primary-navigation">
             <li><a class="nav-link" href="#">Home</a> </li>
-            <li><a class="nav-link" href="/shop-now.html">Get started</a></li>
+            <li><a class="nav-link" href="/browse.html">Get started</a></li>
             <li><a class="nav-link" href="#services">Services</a></li>
             <li><a class="nav-link" href="/contact.html">Contact us</a></li>
         </ul>
@@ -64,7 +64,7 @@
                 <h2 class="hero-banner-title">Welcome to Bath Magic Inc!</h2>
                 <p class="hero-banner-paragraph">We make your bathroom proud</p>
             </div>
-            <a class="button" href="/shop-now.html">
+            <a class="button" href="/browse.html">
                 <p class="button-text"> Get started</p>
             </a>
         </div>
@@ -87,7 +87,7 @@
                     <div class="horizontal-line"></div>
                     <p>Discover a bathtub style that delights all of your senses.
                     </p>
-                    <a class="button" href="/shop-now.html">
+                    <a class="button" href="/browse.html">
                         <p class="button-text">Browse bathtubs</p>
                     </a>
                 </div>
