--- a/browse.html
+++ b/browse.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/shop-now.html">
+                    <a href="#">
                         <span>Get started</span>
                     </a>
                 </li>
