--- a/browse.html
+++ b/browse.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="">
+                    <a href="/contact.html">
                         <span>Contact</span>
                     </a>
                 </li>
