--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#">
+                    <a href="/index.html">
                         <span>Home</span>
                     </a>
                 </li>
