--- a/index.html
+++ b/index.html
@@ -70,15 +70,6 @@
         </div>
     </header>
     <main id="main-content" class="main-content">
-        <!--Fixa till denna section-->
-        <section class="javascript-section">
-            <div class="javascript-div">
-                <header class="sub-title">
-                    <h2>Fixa till denna section</h2>
-                </header>
-                <p class="my-text" id="myText">Make your bathroom proud today</p>
-            </div>
-        </section>
         <section class="bathtub-section">
             <div class="bathtub-container">
                 <div class="shop-bathtub-items">
@@ -87,7 +78,7 @@
                     <div class="horizontal-line"></div>
                     <p>Discover a bathtub style that delights all of your senses.
                     </p>
-                    <a class="button" href="/browse.html">
+                    <a class="button" href="/browse.html#browse-section">
                         <p class="button-text">Browse bathtubs</p>
                     </a>
                 </div>
